@@ -1015,7 +1015,7 @@ public class GUIUtilities
 		{
 			if((modifiers & MouseEvent.BUTTON1_MASK) != 0)
 				return ((modifiers & MouseEvent.META_MASK) != 0);
-			if(OperatingSystem.hasJava14())
+			if(!OperatingSystem.hasJava14())
 				return ((modifiers & MouseEvent.BUTTON3_MASK) != 0);
 			else
 				return ((modifiers & MouseEvent.BUTTON2_MASK) != 0);
@@ -1035,7 +1035,7 @@ public class GUIUtilities
 		{
 			if((modifiers & MouseEvent.BUTTON1_MASK) != 0)
 				return ((modifiers & MouseEvent.CTRL_MASK) != 0);
-			if(OperatingSystem.hasJava14())
+			if(!OperatingSystem.hasJava14())
 				return ((modifiers & MouseEvent.BUTTON2_MASK) != 0);
 			else
 				return ((modifiers & MouseEvent.BUTTON3_MASK) != 0);
